# ai-rag-chatbot

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/: evaluation_cases.jsonl
docs/: architecture.md  deployment.md  evaluation.md  interview-prep.md  llamaindex-comparison.md  walkthrough.md
reports/: evaluation-report.json  evaluation-report.md
src/ai_rag_chatbot/: __init__.py  app.py  chunking.py  config.py  demo_data.py  document_loader.py  embeddings.py  evaluate.py  evaluation.py  generation.py  llamaindex_pipeline.py  rag.py  retrieval.py  vector_store.py
tests/: test_chunking.py  test_document_loader.py  test_embeddings.py  test_evaluation.py  test_generation.py  test_llamaindex_pipeline.py  test_rag.py  test_retrieval.py  test_vector_store.py
