[project]
name = "ai-rag-chatbot"
version = "0.1.0"
description = "A document-based RAG chatbot built with Python, Streamlit, LangChain, OpenAI, and Chroma."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "streamlit>=1.52.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

