[project]
name = "ai-rag-chatbot"
version = "0.3.0"
description = "A document-based RAG chatbot built with Python, Streamlit, LangChain, OpenAI, and Chroma."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Qianxi Lu" },
]
dependencies = [
    "chromadb>=1.1.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.0.0",
    "python-dotenv>=1.2.0",
    "streamlit>=1.52.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rag-evaluate = "ai_rag_chatbot.evaluate:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_rag_chatbot"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
